feat: formalize tracking test specs
Use a special class -- `TestSpecs` -- to track contrasts and tests
to be performed. Also uses a YAML file to specify tests and contrasts.

Squashed commit of the following:

commit 42f0d37f4f2bb7e26004608adfdce93f7d0ac685
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Wed Sep 24 15:40:19 2025 -0400

    feat: get tests table from test specs

commit 83e1fec17e255adf6783653b62ab745fd8949994
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Wed Sep 24 14:02:37 2025 -0400

    feat: get contrasts table from test specs

commit 387c7ada558381b5b6ea4e0a867f2b510b37475d
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Wed Sep 24 13:38:28 2025 -0400

    refactor: use get contrasts to simply validate test specs

commit 31d587adb423aa2e1742b8d2353d89005edf54b3
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Wed Sep 24 13:36:51 2025 -0400

    feat: get contrasts w/ names from test specs

commit 5909be99f00b8ea9ffb2306d76e72ea96d3ac0c3
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Wed Sep 24 12:06:58 2025 -0400

    fix: update deprecated argument used in scree plot

commit 007720adedbc38f78daaa63026f1da6b2ce85395
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Wed Sep 24 11:51:43 2025 -0400

    test: update variance partition violin plot

commit 250d81e15a2ac7746b406fcbf8126fe9c019e72e
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Wed Sep 24 11:46:09 2025 -0400

    test: expect PCA snapshot more flexible

commit 164f56af571f5d8e50314090555fdffbd7981257
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Tue Sep 23 17:40:52 2025 -0400

    test: suppress VST messages to cleanup test output

commit 5d7285797665582acde5cd3e2c22da62de823fe7
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Tue Sep 23 17:23:47 2025 -0400

    docs: document and export TestSpecs

commit 9f3a33c00f120e9353a6b1c62765a8e52dcae26b
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>


--- a/README.Rmd
+++ b/README.Rmd
@@ -27,29 +27,27 @@ knitr::opts_chunk$set(
 
 You can install the development version of davizr from [GitHub](https://github.com/) with:
 
-``` r
+```r
 # install.packages("devtools")
 devtools::install_github("trev-f/davizr")
 ```
 
+## Development
 
-## Contribute
+Pull the repository from GitHub:
 
-Contributions are welcome to this open source project.
-
-To contribute, fork this repo and clone it locally.
-After making changes, open a pull request against the upstream repo, `utia-gc/davizr`.
-We will review it and merge any changes or leave feedback.
-
-### Development dependencies
-
-We recommend using `renv` to manage dependencies.
-
-To get started, first remove any traces of an existing `renv` project, then initialize a new project:
-
-``` r
-renv::deactivate(clean = TRUE)
-renv::init(bioconductor = TRUE)
+```sh
+git pull utia-gc/davizr
 ```
 
-When initializing the project, select option `1` for explicit mode to only install libraries declared in the DESCRIPTION file.
+Navigate into the repository and install development dependencies using `renv`:
+
+```r
+renv::install()
+```
+
+I recommend only using the `DESCRIPTION` file to maintain package state.
+`renv` should only be used for environment isolation.
+Don't use `renv::snapshot()` to maintain package state in the `renv.lock` file.
+
+## Example
